Much improved documentation

--- a/doc/code_html.tex
+++ b/doc/code_html.tex
@@ -1,5 +1,5 @@
 %
-%$Id: code_a4.tex,v 1.2 2003-03-10 09:42:23 gotm Exp $
+%$Id: code_html.tex,v 1.1 2003-03-10 09:42:23 gotm Exp $
 %
 
 \documentclass[a4paper,twoside]{article}
@@ -66,15 +66,8 @@ Test Case Documentation
  \end{center}
 }
 
-\vspace{8mm}
 
-\begin{figure}[!h]
-  \begin{center}
-  \includegraphics[scale=0.6]{./figures/mixerA.eps}
-  \end{center}
-\end{figure}
-
-\vspace{7mm}
+\vspace{10mm}
 
 {\sf \bf \Large
  \begin{center}
@@ -104,7 +97,7 @@ Test Case Documentation
 \include{gotm}        
 
 \cleardoublepage
-\include{meanflowIntro} 
+\include{meanflowIntroHTML} 
 \include{meanflow}      
 
 \cleardoublepage
@@ -123,7 +116,7 @@ Test Case Documentation
 \include{output}      
 
 \cleardoublepage
-\include{utilIntro}   
+\include{utilIntroHTML}   
 \include{util}       
 
 \cleardoublepage
