--- a/doc/definitions.tex
+++ b/doc/definitions.tex
@@ -1,5 +1,5 @@
 %
-%$Id: definitions.tex,v 1.1 2003-03-10 09:42:23 gotm Exp $
+%$Id: definitions.tex,v 1.2 2004-01-13 10:56:09 lars Exp $
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -60,6 +60,7 @@
 \newcommand{\rotation}{{\, \rm rot}}
 
 %stuff
+\def\magn#1{| #1 |}
 \newcommand{\comma}{\; , \quad}
 \newcommand{\point}{\quad .}
 
