--- a/doc/extraIntro.tex
+++ b/doc/extraIntro.tex
@@ -1,5 +1,5 @@
 %
-%$Id: extraIntro.tex,v 1.1 2003-03-10 09:42:23 gotm Exp $
+%$Id: extraIntro.tex,v 1.2 2005-07-06 14:11:27 kbk Exp $
 %
 
 \section{Extra features \label{sec:extra}}
@@ -11,9 +11,8 @@ Here, some extra features are stored which are up to now
 \item the {\tt seagrass} module.
 \end{itemize}
 
-Both modules are relatively specific and designed for special
-applications, see the {\tt ooster} scenario in \sect{ooster} for
-simulations in the Eastern Scheldt (\cite{Burchardetal2000}) and the
-{\tt seagrass} scenario in \sect{seagrass} for a one-dimensional
-reproduction of the \cite{VerduinBackhaus2000} seagrass-current
-simulations.
+A test scenario to become acquainted with the {\tt sediment} module
+is discussed in \sect{rouse}, where the so-called Rouse-profile
+is reproduced. The {\tt seagrass} scenario in \sect{seagrass} 
+investigates the \cite{VerduinBackhaus2000} seagrass-current
+simulations. 
