--- a/doc/definitions.tex
+++ b/doc/definitions.tex
@@ -1,5 +1,5 @@
 %
-%$Id: definitions.tex,v 1.2 2004-01-13 10:56:09 lars Exp $
+%$Id: definitions.tex,v 1.3 2005-07-06 14:11:27 kbk Exp $
 %
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -11,13 +11,17 @@
 %                                                                   %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newcommand{\figloc}[1]{/home/lars/gotmTest/doc/figures/{#1}}
+
 % figures and tables
 \newcommand{\fig}[1]{figure {\ref{#1}}}
 \newcommand{\tab}[1]{table {\ref{#1}}}
 \newcommand{\sect}[1]{section {\ref{#1}}}
+\newcommand{\sects}[2]{sections {\ref{#1}}--{\ref{#2}}}
 \newcommand{\Fig}[1]{Figure {\ref{#1}}}
 \newcommand{\Tab}[1]{Table {\ref{#1}}}
 \newcommand{\Sect}[1]{Section {\ref{#1}}}
+\newcommand{\Sects}[2]{Sections {\ref{#1}}--{\ref{#2}}}
 \newcommand{\eq}[1]{(\ref{#1})}
 
 % displaystyle
@@ -49,6 +53,7 @@
 
 % turbulence
 \def\mean#1{ {\langle #1 \rangle} }
+\def\meandot#1{ \dot{ \rule{0mm}{4mm} \langle #1 \rangle} }
 
 % Christoffel Symbols 
 \newcommand{\chra}[3]{\left[\; #1#2,#3\; \right]}
